<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.RequestPaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center_vertical">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:scaleX="0.7"
                android:scaleY="0.7"
                app:srcCompat="@mipmap/ic_launcher" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_risk_1"
                android:id="@+id/textView5"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/day30btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:clickable="true"
                android:minHeight="150dp"

                android:minWidth="150dp"
                app:srcCompat="@drawable/guarantee" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe"
                android:id="@+id/btnSubscribe"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:minWidth="250dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:text="@string/no_risk_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading_bar"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="200dp"
        android:visibility="visible" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>


