<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/container"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical"
        android:orientation="vertical"
       >


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            ads:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/upgrade_header_text"
            android:layout_width="match_parent"


            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/upgrade_header_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/upgrade_features"
            android:layout_width="match_parent"


            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="clip_horizontal|center|center_horizontal"
            android:maxLines="20"
            android:singleLine="false"
            android:text="@string/upgrade_features"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/upgrade_features2"
                android:layout_width="wrap_content"


                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal|center|center_horizontal"
                android:text="On Sale - 50% Off"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/upgrade_features4"
                android:layout_width="wrap_content"


                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textColor="#F40000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/upgradeBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="onClickUpgradeNow"
                android:text="@string/upgrade_button_text"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_bar"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="200dp"
        android:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
