<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UI_Layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dip"
        app:layout_constraintBottom_toTopOf="@+id/bottomSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <ImageView

            android:id="@+id/previewImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"


            android:layout_marginBottom="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/preview_image"
            android:minWidth="20dp"
            android:minHeight="20dp"
            android:scaleType="fitCenter"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/videoicon"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_gravity="center_horizontal"

            android:layout_marginTop="150dp"
            android:alpha="0.5"
            android:contentDescription="@string/video_icon"
            android:visibility="visible"
            custom:srcCompat="@drawable/videoicon" />

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"


            android:layout_marginBottom="100dp"
            custom:auto_cycle="false"
            custom:pager_animation_span="1" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">


        <FrameLayout
            android:id="@+id/fl_adplaceholder"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            android:background="#083E78"
            android:visibility="gone">

        </FrameLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:minHeight="250dp"
            android:visibility="gone"
            custom:adSize="MEDIUM_RECTANGLE"
            custom:adUnitId="ca-app-pub-8534786486141147/8892351966">

        </com.google.android.gms.ads.AdView>




        <TextView
            android:id="@+id/useShareLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/use_share_to_instead_of_copy_link"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/downloadphoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/downloadbtn" />

            <ImageView
                android:id="@+id/sharebtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                android:src="@drawable/sharethis" />


            <!-- Replace for any background you want (e.g. @drawable/image) -->


            <ImageView
                android:id="@+id/scheduleBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/schedule_button"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/currentToFeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/instabtnsinglephoto"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/currentToStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:src="@drawable/instabtnsinglestories" />

            <ImageView
                android:id="@+id/postlater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/postlater"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/instagramstoriesbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/instabtnstories" />

            <ImageView
                android:id="@+id/instagrambtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/instabtnfeed" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_bar"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"

        android:layout_marginBottom="100dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintTop_toTopOf="parent" />




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:background="@color/colorPrimary"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />


    <!---
        <com.google.android.gms.ads.formats.UnifiedNativeAdView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#083E78"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ad_app_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:maxWidth="100dp"
                        android:maxHeight="100dp"
                        custom:srcCompat="@drawable/callericon" />

                    <TextView
                        android:id="@+id/ad_headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="THis is the headline" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Button" />
                </LinearLayout>


            </LinearLayout>
        </com.google.android.gms.ads.formats.UnifiedNativeAdView>
-->
    <WebView
        android:id="@+id/browser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:ignore="WebViewLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>